[gd_scene load_steps=4 format=2]

[ext_resource path="res://EndScene.gd" type="Script" id=1]
[ext_resource path="res://Fonts/monogram_extended.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0.486275, 0.247059, 0.345098, 1 )
font_data = ExtResource( 2 )

[node name="EndScene" type="Node2D"]
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = 30.0
margin_top = 170.0
margin_right = 550.0
margin_bottom = 230.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.486275, 0.247059, 0.345098, 1 )
text = "OVER TIME SOMETHING INCREDIBLE HAPPENED..."

[node name="HeartTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="TextTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="timeout" from="HeartTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TextTimer" to="." method="_on_TextTimer_timeout"]
